--- a/06 Nav Slide.html
+++ b/06 Nav Slide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>前端俱乐部的滑动广告特效</title>
     <style>
         *{margin: 0;padding: 0;}
         ul{margin: 100px auto;width: 200px;height: 200px;}
