--- a/JS 02 Class.html
+++ b/JS 02 Class.html
@@ -25,7 +25,7 @@
     }
     //类方法
     People.Run = function() {
-        console.log("类方法不能被实例调用 只能这样用 为什么要存在。");
+        console.log("类方法不能被实例调用 只能这样用 为什么要存在？为了静态方法？");
     }
 
     //测试
