--- a/JS 04 Class ES6.html
+++ b/JS 04 Class ES6.html
@@ -10,8 +10,14 @@
 <body>
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
-    
+    class Bar {
+        doStuff() {
+            console.log('stuff');
+        }
+    }
+
+    var b = new Bar();
+    b.doStuff() // "stuff"    
 </script>
 </html>
