--- a/12 Absolute Fixed.html
+++ b/12 Absolute Fixed.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>Absolute Fixed</title>
 <style type="text/css">
 	#body{
 		width:778px; height:1000px;
