--- a/16 Display None.html
+++ b/16 Display None.html
@@ -14,6 +14,7 @@
 </style>
 </head>
 <body>
+	<p>display none的图片是否显示</p>
 	<img id="casemiro" src="https://wx4.sinaimg.cn/mw690/006QCDaNgy1fjhnsf8o79j30sg0pfq4o.jpg"/>
 	<div id="ramos"></div>
 </body>
